<resources>
    <string name="app_name">Exercise_SQLite</string>
    <string name="daftar_kontak">Daftar Kontak</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="titik_dua">:</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="alamat">Alamat</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="nama">Nama</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="masukkan_nomor_telepon">Masukkan Nomor Telepon</string>
    <string name="simpan">Simpan</string>
    <string name="email">Email</string>
    <string name="hapus">Hapus</string>
    <string name="edit">Edit</string>
    <string name="profil">Profil</string>
    <string name="batal">Batal</string>
    <string name="update_data">Update Data</string>
</resources>
