<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailInput">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambah_data"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/nama"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:layout_weight="4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/titik_dua"
                android:gravity="center_vertical"
                android:layout_gravity="end"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_nama"
                android:id="@+id/InputNama"
                android:inputType="textPersonName"
                android:autofillHints=""
                android:layout_weight="8"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/nomor_telepon"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:layout_weight="4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/titik_dua"
                android:gravity="center_vertical"
                android:layout_gravity="end"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_nomor_telepon"
                android:id="@+id/InputTelp"
                android:inputType="phone"
                android:autofillHints=""
                android:layout_weight="8"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:layout_weight="4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/titik_dua"
                android:gravity="center_vertical"
                android:layout_gravity="end"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_email"
                android:id="@+id/InputEmail"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                android:layout_weight="8"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/alamat"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:layout_weight="4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/titik_dua"
                android:gravity="center_vertical"
                android:layout_gravity="end"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_alamat"
                android:id="@+id/InputAlamat"
                android:inputType="textMultiLine"
                android:layout_weight="8"
                android:autofillHints="" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/simpan"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:id="@+id/saveButton"/>

    </LinearLayout>
</ScrollView>